--- a/manifest.yaml
+++ b/manifest.yaml
@@ -3,5 +3,5 @@ owners:
 - name: Appscode
   email: team@appscode.com
 dependencies:
-- package: github.com/a8uhnf/test-yaml
+- package: github.com/packsh/tasty-kube
   branch: master
